--- a/src/components/Criptocosas/Intercambio.css
+++ b/src/components/Criptocosas/Intercambio.css
@@ -1,3 +1,14 @@
-.Intercambio{
-    margin:50px;
+.intercambio{
+    width: 300px;
+    text-align: center;
+    border: 15px solid rgb(255, 0, 0);
+    padding: 50px;
+    margin: 0 auto;
+    margin-top:16px;
+    background-color: rgb(255, 255, 255);
+    box-shadow: rgb(85, 91, 255) 0px 0px 0px 3px, 
+    rgb(31, 193, 27) 0px 0px 0px 6px, 
+    rgb(255, 217, 19) 0px 0px 0px 9px, 
+    rgb(255, 156, 85) 0px 0px 0px 12px, 
+    rgb(255, 85, 85) 0px 0px 0px 15px;
 }
