--- a/src/components/Calculadora/Calculator.css
+++ b/src/components/Calculadora/Calculator.css
@@ -1,3 +1,86 @@
-.input{
-    align-items:space-between;
+.Input{
+    display: flex;
+    background-color: whitesmoke;
+    border-radius: 4px;
+    border:1px solid gray;
+    box-shadow: 
+    rgb(85, 91, 255) 0px 0px 0px 3px, 
+    rgb(31, 193, 27) 0px 0px 0px 6px, 
+    rgb(255, 217, 19) 0px 0px 0px 9px, 
+    rgb(255, 156, 85) 0px 0px 0px 12px, 
+    rgb(255, 85, 85) 0px 0px 0px 15px;
+    margin-bottom: 20px;
+    margin:50px auto;
+    min-height: 20px;
+    padding: 19;
+    text-align: center;
+    width:10rem;
+}
+
+.Input2{
+    display: flex;
+    background-color: whitesmoke;
+    border-radius: 4px;
+    border:1px solid gray;
+    box-shadow: 
+    rgb(85, 91, 255) 0px 0px 0px 3px, 
+    rgb(31, 193, 27) 0px 0px 0px 6px, 
+    rgb(255, 217, 19) 0px 0px 0px 9px, 
+    rgb(255, 156, 85) 0px 0px 0px 12px, 
+    rgb(255, 85, 85) 0px 0px 0px 15px;
+    margin-bottom: 20px;
+    margin:50px auto;
+    min-height: 20px;
+    padding: 19;
+    text-align: center;
+    width:10rem;
+
+}
+
+.Label{
+    display: flex;
+    align-items: flex-start;
+    background-color: whitesmoke;
+    border-radius: 4px;
+    border:1px solid gray;
+    box-shadow: 
+    rgb(85, 91, 255) 0px 0px 0px 3px;
+    margin-bottom: 20px;
+    margin:50px auto;
+    min-height: 20px;
+    padding: 19;
+    text-align: center;
+    width:2rem;
+}
+
+.Resultado{
+    display: flex;
+    align-items: flex-start;
+    background-color: whitesmoke;
+    border-radius: 4px;
+    border:1px solid gray;
+    box-shadow: 
+    rgb(255, 85, 85) 0px 0px 0px 15px;
+    margin-bottom: 20px;
+    margin:50px auto;
+    min-height: 20px;
+    padding: 19;
+    text-align: center;
+    width:4rem;
+}
+
+.Resultados{
+    display: flex;
+    align-items: flex-start;
+    background-color: whitesmoke;
+    border-radius: 4px;
+    border:1px solid gray;
+    box-shadow: 
+    rgb(31, 193, 27) 0px 0px 0px 6px;
+    margin-bottom: 20px;
+    margin:50px auto;
+    min-height: 20px;
+    padding: 19;
+    text-align: center;
+    width:16rem;
 }
