--- a/src/components/Forms/Person.css
+++ b/src/components/Forms/Person.css
@@ -1,1 +1,23 @@
+.Person .error{
+    border: 1px solid red;
+}
 
+.Person .errorMessage{
+    border: 1px solid red;
+}
+
+.Person{
+    background-color: whitesmoke;
+    border-radius: 4px;
+    border:1px solid gray;
+    box-shadow: 
+    rgb(85, 91, 255) 0px 0px 0px 3px, 
+    rgb(31, 193, 27) 0px 0px 0px 6px, 
+    rgb(255, 217, 19) 0px 0px 0px 9px;
+    margin-bottom: 20px;
+    margin:50px auto;
+    min-height: 20px;
+    padding: 19;
+    text-align: center;
+    width:70%;
+}
